[project]
name = "session-api"
version = "0.1.0"
description = "API service for retrieving analyzed psychology sessions"
authors = [
    {name = "MatanRN", email = "matan.rn@outlook.com"},
]
dependencies = [
    "fastapi[standard]>=0.122.0",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.0",
    "ddtrace>=4.0.0",
    "psychology-common @ file:///${PROJECT_ROOT}/../common",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
