[project]
name = "transcript-analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MatanRN", email = "matan.rn@outlook.com"},
]
dependencies = [
    "psychology-common @ file:///${PROJECT_ROOT}/../common",
    "openai>=2.8.1",
    "redis>=7.1.0",
    "datadog>=0.52.1",
    "dotenv>=0.9.9",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false