[project]
name = "transcript-analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MatanRN", email = "matan.rn@outlook.com"},
]
dependencies = [
    "psychology-common @ file:///${PROJECT_ROOT}/../common",
    "redis>=7.1.0",
    "ddtrace>=4.0.0",
    "google-genai>=0.1.0",
    "minio>=7.2.20",
    "pika>=1.3.2",
    "psycopg[binary]>=3.2.0",
    "sqlmodel>=0.0.27",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false